--- a/data_job/package.json
+++ b/data_job/package.json
@@ -12,7 +12,14 @@
     "bigchaindb-driver": "^4.0.1",
     "bip39": "^2.5.0",
     "env.json": "^2.0.1",
+    "fs-jetpack": "^2.1.0",
     "mongodb": "^3.0.10",
     "node-schedule": "^1.3.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1"
   }
 }
