--- a/data_job/package.json
+++ b/data_job/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "babel-node ./postData --presets env"
   },
   "author": "Manuel <manuel@bigchaindb.com>",
   "license": "ISC",
