Updated the README and .env.example

--- a/hyperledger-chainservice/.env.example
+++ b/hyperledger-chainservice/.env.example
@@ -1,27 +1,35 @@
 
-PORT=
-NODE_ENV=
-DOMAIN_URL=
+PORT=5000
+NODE_ENV=LOCAL
+DOMAIN_URL=http://localhost:5000
 
+#You can use this if you deploy your network to aws
 AWS_ACCESS_KEY=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
 AWS_QUEUE_NAME=
 DEAD_LETTER_QUEUE_ARN=
 
-BYPASS_QUEUE=
+#Queues can be used to handle high traffic 
+BYPASS_QUEUE=1
 LOGGER_SQS_DEBUG=
 PURGE_QUEUE_ON_STARTUP=
 
-PEER_HOST=
-ORDERER_HOST=
-CA_HOST=
+#this disables the jwt check on the routes
+SKIP_MIDDLEWARE=1
 
+#if you use aws change this to the aws domain WITHOUT the port
+PEER_HOST=localhost
+ORDERER_HOST=localhost
+CA_HOST=localhost
+
+#You can leave this empty
 PUSHER_KEY=
 PUSHER_APP_ID=
 PUSHER_SECRET=
 PUSHER_CLUSTER=
 
+#This is used to login if routes are protected
 AUTH0_CLIENT_ID=
 AUTH0_DOMAIN=
 AUTH0_CLIENT_SECRET=
