--- a/bdb-hyperledger-oracle/package.json
+++ b/bdb-hyperledger-oracle/package.json
@@ -21,7 +21,8 @@
     "debug": "^3.1.0",
     "express": "^4.16.3",
     "express-json-validator-middleware": "^1.2.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.8",
