--- a/bdb-hyperledger-oracle/package.json
+++ b/bdb-hyperledger-oracle/package.json
@@ -16,16 +16,13 @@
   },
   "dependencies": {
     "bigchaindb-driver": "^4.1.0",
-    "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "debug": "^3.1.0",
     "express": "^4.16.3",
     "express-json-validator-middleware": "^1.2.3",
-    "morgan": "^1.9.0",
-    "socket.io": "^2.1.1"
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.16.8",
     "@types/compression": "^0.0.35",
     "@types/debug": "0.0.29",
     "@types/express": "^4.11.1",
