added application insights logging in UI

--- a/hyperledger-chainservice/.gitignore
+++ b/hyperledger-chainservice/.gitignore
@@ -54,6 +54,9 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
+# dotenv environment variables file
+.env
+
 # next.js build output
 .next
 
@@ -78,6 +81,10 @@ npm-debug.log
 
 test-reports/
 
+.env
+.DS_Store
+.idea
+
 vendor
 .idea
 
@@ -85,4 +92,3 @@ src/common/config/creds/*
 coverage
 yarn-error.log
 package-lock.json
-
