--- a/bdb-hyperledger-oracle/package.json
+++ b/bdb-hyperledger-oracle/package.json
@@ -15,6 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "applicationinsights": "^1.0.3",
     "bigchaindb-driver": "^4.1.0",
     "compression": "^1.7.3",
     "debug": "^3.1.0",
