--- a/hyperledger-chainservice/package.json
+++ b/hyperledger-chainservice/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^2.0.2",
     "@nestjs/testing": "^5.0.0",
     "@nestjs/websockets": "^5.0.0",
+    "@types/applicationinsights-js": "^1.0.5",
     "auth0": "^2.9.1",
     "aws-sdk": "^2.140.0",
     "axios": "^0.18.0",
