--- a/ui/.env
+++ b/ui/.env
@@ -1,3 +1,3 @@
 REACT_APP_PORT=5000
-REACT_APP_CHAINCODE_URL=http://localhost:5000/numbers
+REACT_APP_CHAINCODE_URL=http://localhost:5000/oracle
 REACT_APP_APPLICATION_INSIGHTS_KEY=06c7c048-9d94-47eb-a245-3377a9bdd29a
