--- a/hyperledger-chainservice/tsconfig.json
+++ b/hyperledger-chainservice/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
+        "baseUrl": "./",
         "declaration": false,
         "noImplicitAny": false,
         "removeComments": true,
