--- a/hyperledger-chainservice/package.json
+++ b/hyperledger-chainservice/package.json
@@ -6,7 +6,7 @@
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "start:watch": "nodemon",
     "build": "tsc -p ./tsconfig.json",
-    "start:prod": "node dist/server.js",
+    "start:prod": "node dist/main.js",
     "lint": "tslint --fix -c tslint.json './src/**/*.ts'",
     "pretest": "npm run lint",
     "clean": "rm -rf node_modules && rm -rf dist",
@@ -54,6 +54,7 @@
     "reflect-metadata": "^0.1.10",
     "rxjs": "^6.0.0",
     "sqs-consumer": "^3.7.0",
+    "ts-node": "^7.0.0",
     "winston": "^3.0.0",
     "winston-daily-rotate-file": "^3.2.1"
   },
