--- a/hyperledger-chainservice/.env.example
+++ b/hyperledger-chainservice/.env.example
@@ -3,13 +3,6 @@ PORT=5000
 NODE_ENV=LOCAL
 DOMAIN_URL=http://localhost:5000
 
-#You can use this if you deploy your network to aws
-AWS_ACCESS_KEY=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
-AWS_QUEUE_NAME=
-DEAD_LETTER_QUEUE_ARN=
-
 #Queues can be used to handle high traffic 
 BYPASS_QUEUE=1
 LOGGER_SQS_DEBUG=
@@ -29,8 +22,8 @@ PUSHER_APP_ID=
 PUSHER_SECRET=
 PUSHER_CLUSTER=
 
-#This is used to login if routes are protected
-AUTH0_CLIENT_ID=
-AUTH0_DOMAIN=
-AUTH0_CLIENT_SECRET=
-AUTH0_AUDIENCE=
+#This is used to login if routes are protected If not used use these values
+AUTH0_CLIENT_ID=test
+AUTH0_DOMAIN=test
+AUTH0_CLIENT_SECRET=test
+AUTH0_AUDIENCE=test
