--- a/bdb-hyperledger-oracle/package.json
+++ b/bdb-hyperledger-oracle/package.json
@@ -19,6 +19,7 @@
     "bigchaindb-driver": "^4.1.0",
     "compression": "^1.7.3",
     "debug": "^3.1.0",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-json-validator-middleware": "^1.2.3",
     "morgan": "^1.9.0",
