--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:nonproduction": "react-scripts start &",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
