--- a/ui/.gitignore
+++ b/ui/.gitignore
@@ -1,18 +1,38 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+*.swp
 
-# dependencies
-/node_modules
-/build
+pids
+logs
+results
+tmp
 
-# testing
-/coverage
+# Build
+public/css/main.css
 
-# production
-/build
+# Coverage reports
+coverage
 
-# misc
+# API keys and secrets
+.env
+
+# Dependency directory
+node_modules
+bower_components
+
+# Editors
+.idea
+*.iml
+
+# OS metadata
 .DS_Store
+Thumbs.db
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Ignore built ts files
+dist
