--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,37 @@ services:
     ports:
       - "6379"
     command: redis-server --save "" --appendonly no
+
+  bigchaindb:
+    depends_on:
+      - mongodb
+      - tendermint
+    image: bigchaindb/bigchaindb:master
+    environment:
+      BIGCHAINDB_DATABASE_BACKEND: localmongodb
+      BIGCHAINDB_DATABASE_HOST: mongodb
+      BIGCHAINDB_DATABASE_PORT: 27017
+      BIGCHAINDB_SERVER_BIND: 0.0.0.0:9984
+      BIGCHAINDB_WSSERVER_HOST: 0.0.0.0
+      BIGCHAINDB_WSSERVER_ADVERTISED_HOST: bigchaindb
+      BIGCHAINDB_TENDERMINT_HOST: tendermint
+      BIGCHAINDB_TENDERMINT_PORT: 26657
+    ports:
+      - "9984:9984"
+      - "9985:9985"
+      - "26658"
+    command: start
+
+  tendermint:
+    image: tendermint/tendermint:0.22.8
+    entrypoint: ''
+    ports:
+      - "26656:26656"
+      - "26657:26657"
+    command: sh -c "tendermint init && tendermint node --consensus.create_empty_blocks=false --proxy_app=tcp://bigchaindb:26658"
+
+  mongodb:
+    image: mongo:3.6
+    ports:
+      - "27017:27017"
+    command: mongod
