--- a/ui/package.json
+++ b/ui/package.json
@@ -10,13 +10,25 @@
     "dotenv": "^6.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "2.0.0-next.3e165448"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:nonproduction": "react-scripts start &",
+    "build:nonproduction": "react-scripts start",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">0.25%",
+      "not op_mini all",
+      "ie 11"
+    ]
   }
 }
