ui fixes, oracle

--- a/bdb-hyperledger-oracle/.env-example
+++ b/bdb-hyperledger-oracle/.env-example
@@ -1,6 +1,7 @@
 APP_PORT=4000
-BDB_URL=http://localhost:9984/api/v1/
+BDB_URL=http://13.81.13.189:32815/api/v1/
 BDB_APP_ID=
 BDB_APP_KEY=
 CHAINCODE_URL=http://localhost:5000
-APPINSIGHTS_KEY=
+APPINSIGHTS_KEY=06c7c048-9d94-47eb-a245-3377a9bdd29a
+DEBUG=log
