--- a/ui/.env.example
+++ b/ui/.env.example
@@ -1,4 +1,4 @@
 REACT_APP_PORT=5000
-REACT_APP_CHAINCODE_URL=http://localhost:5000/oracle
+REACT_APP_CHAINCODE_URL=http://13.81.13.189:5000/oracle
 REACT_APP_APPLICATION_INSIGHTS_KEY=06c7c048-9d94-47eb-a245-3377a9bdd29a
-REACT_APP_BDB_SERVER_URL=http://localhost:9984
+REACT_APP_BDB_SERVER_URL=http://13.81.13.189:32815
